# OpenGL-Assignment

./: .gitignore  CMakeLists.txt  Requirements.md  main.cpp  readme.md  remember.md  shader.h  shaderProgram.h  shaderType.cpp  shaderType.h  todo.md  uncategorized.md
dependencies/: CMakeLists.txt  crefile.hpp
experiments/: filesystem.h
experiments/preliminary/: fileThroughput.h  results.md
experiments/preliminary/fileThroughput/: fileThroughput.cpp  fileThroughput.h
experiments/preliminary/prototypeParsers/: XMLParseState.cpp  bufferParseResult.cpp  bufferParseResult.h  daeParser.cpp  daeParser.h  prototypeDaeParser.cpp  prototypeDaeParser.h  prototypeObjParser.cpp  prototypeObjParser.h  stringToFloatFast.cpp  stringToFloatFast.h  typedefs.cpp  typedefs.h  xmlNode.cpp  xmlNode.h  xmlParsingStackMember.cpp  xmlParsingStackMember.h
glm/include/glm/: common.hpp  exponential.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
glm/include/glm/detail/: func_common_simd.inl  func_exponential_simd.inl  func_geometric_simd.inl  func_integer_simd.inl  func_matrix.hpp  func_matrix.inl  func_matrix_simd.inl  func_packing.inl  setup.hpp  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp  type_vec1.hpp
planning/: ImperativeDaeParsing.md  approachingZeroDriverOverhead.md  dataNeededFromFileToGL.md  designOfParallelOOParser.md  fileFormatPlanning.md  imperativeDaeParsing.md  parallelDaeParsing.md  parallelObjParsing.md  safeReadingOfCorruptFiles.md
resources/: testText.txt  tetrahedron.dae
resources/27cubesWithTextures/: 8cubestexture.dae  modifierApplied.dae
shaders/: fragment.glsl  lightSourceFragment.glsl  lightSourceVertex.glsl  lightingMeshFragment.glsl  lightingMeshVertex.glsl  meshFragment.glsl  meshGeometry.glsl  meshVertex.glsl  shadowFragment.glsl  shadowGeometry.glsl  shadowMeshFragment.glsl  shadowMeshGeometry.glsl  shadowMeshVertex.glsl  shadowPassFragment.glsl  shadowPassGeometry.glsl  shadowPassVertex.glsl  shadowVertex.glsl  vertex.glsl
src/: GMM.h  Mesh.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  bitBuffer.h  consoleControl.h  dotFuzFormat.cpp  dotFuzFormat.h  fileReader.h  objParser.cpp  objParser.h  safeIndex.h
src/daeParsing/: DoParallel.h  XMLParseState.h  bufferParseResult.h  daeParser.cpp  daeParser.h  xmlNode.h  xmlParsingStackMember.h
src/dotFuz/: GMM.h  HuffmanCoding.h  bitBuffer.cpp  dotFuzFormat.cpp  dotFuzFormat.h
src/files/: fileReader.h  fs.h
src/graphics/: Mesh.cpp  Mesh.h  Texture.cpp  Texture.h  Vertex.h
src/objParsing/: objParser.cpp  objParser.h
src/shaders/: shader.h  shaderProgram.h  shaderType.h
vsSolution/: vsSolution.psess  vsSolution.sln  vsSolution.sln.DotSettings
vsSolution/Debug/: fragment.glsl  vsSolution.ilk
vsSolution/Debug/resources/27cubesWithTextures/: 8cubestextured.mtl
vsSolution/vsSolution/: HuffmanCoding.h  objParser.cpp  objParser.h  vsSolution.vcxproj  vsSolution.vcxproj.filters
vsSolution/vsSolution/Debug/: vc140.idb
vsSolution/vsSolution/Debug/vsSolution.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vsSolution.lastbuildstate
vsSolution/x64/Debug/: .gitignore
vsSolution/x64/Debug/resources/: 4things.dae  singleTriangle.dae  singleTriangleCopy.dae
vsSolution/x64/Release/: .gitignore  vsSolution.iobj  vsSolution.ipdb
vsSolution/x64/Release/resources/27cubesWithTextures/: 8cubestexture.dae
